fixing height overflow issue in staff page

--- a/wp-content/themes/eyebeam2019/style.scss
+++ b/wp-content/themes/eyebeam2019/style.scss
@@ -2148,7 +2148,8 @@ Events
 	.module-collection .bio {
 		margin-top: .5rem;
 		transition: all .3s ease-out;
-		max-height: 400px;
+		overflow: hidden;
+		height: 0;
 	}
 
 	.module-collection .staff {
